/**
 * 
 */
package org.bdWorld_X.theone.stockage;

import java.util.ArrayList;

import org.bdWorld_X.theone.modele.City;

/**
 * Serialiser et lire donnees a partir d'un fichier
 * @author sherif
 *
 */
public class FichierCityDao implements Dao<City>{

	@Override
	public void inserer(City obj) {
		// TODO Auto-generated method stub
		
	}

	@Override
	public ArrayList<City> lireTous() {
		// TODO Auto-generated method stub
		return null;
	}

}
