package org.bdWorld_X.theone.stockage;

import java.util.ArrayList;

import org.bdWorld_X.theone.modele.Country;

public class FichierCountryDao implements Dao<Country> {

	@Override
	public void inserer(Country obj) {
		// TODO Auto-generated method stub
		
	}

	@Override
	public ArrayList<Country> lireTous() {
		// TODO Auto-generated method stub
		return null;
	}

}
